@@ -3,10 +3,20 @@ package com.webcrawler.core;
 import com.webcrawler.config.CrawlerProperties;
 import com.webcrawler.model.CrawlRequest;
 import com.webcrawler.model.PageContent;
+import com.webcrawler.queue.BatchConsumer;
 import com.webcrawler.queue.UrlQueue;
+import com.webcrawler.service.ActivityFeed;
+import com.webcrawler.service.CrawlJobService;
+import com.webcrawler.service.ScopeService;
 import com.webcrawler.storage.StorageService;
+import com.github.benmanes.caffeine.cache.Cache;
+import com.github.benmanes.caffeine.cache.Caffeine;
+import crawlercommons.filters.basic.BasicURLNormalizer;
+import crawlercommons.robots.SimpleRobotRules;
+import crawlercommons.robots.SimpleRobotRulesParser;
 import jakarta.annotation.PostConstruct;
 import jakarta.annotation.PreDestroy;
+import org.jsoup.Connection;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.slf4j.Logger;
@@ -14,7 +24,13 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.time.Duration;
 import java.time.Instant;
@@ -25,171 +41,209 @@ import java.util.stream.Collectors;
 @Service
 public class WebCrawler {
     private static final Logger logger = LoggerFactory.getLogger(WebCrawler.class);
+
     private final CrawlerProperties config;
     private final UrlQueue urlQueue;
     private final StorageService storageService;
-    private final ExecutorService executorService;
+    private final CrawlJobService jobs;
+    private final ScopeService scope;
+    private final ActivityFeed activity;
+
+    private final ExecutorService fetchExecutor;
     private final ScheduledExecutorService retryScheduler;
-    private final Map<String, Instant> lastCrawled;
-    private final Map<String, RobotsTxtRules> robotsCache;
+    private final ExecutorService workerExecutor;
+
+    // Four caches that used to be unbounded ConcurrentHashMaps — with a
+    // Wikipedia-fanout crawl the host-keyed maps grew without bound and
+    // dominated the JVM heap. Caffeine caps entry count and expires by
+    // access time so RAM stays flat regardless of crawl breadth.
+    //
+    // Trade-off on eviction: an evicted nextFetchAt/hostLock means the
+    // next request treats the host as new and skips the delay once —
+    // one impolite fetch per rare eviction, not a broken crawler. An
+    // evicted robots entry causes a re-fetch (robots.txt legitimately
+    // ages anyway). An evicted sitemap URL causes a duplicate sitemap
+    // parse (harmless idempotent work).
+    //
+    // Follow-up options (see design note): FP64 + Trove primitive
+    // hash-set for sitemapsSeen, Bloom filter for known content hashes,
+    // Redis as an L2 shared across replicas.
+    private final Cache<String, Instant> nextFetchAt = Caffeine.newBuilder()
+            .maximumSize(50_000)
+            .expireAfterAccess(Duration.ofHours(1))
+            .build();
+    private final Cache<String, Object> hostLocks = Caffeine.newBuilder()
+            .maximumSize(50_000)
+            .expireAfterAccess(Duration.ofHours(1))
+            .build();
+    private final Cache<String, SimpleRobotRules> robotsCache = Caffeine.newBuilder()
+            .maximumSize(10_000)
+            .expireAfterWrite(Duration.ofHours(24))
+            .build();
+    private final Cache<String, Boolean> sitemapsSeen = Caffeine.newBuilder()
+            .maximumSize(100_000)
+            .expireAfterWrite(Duration.ofDays(7))
+            .build();
+
+    private final BasicURLNormalizer urlNormalizer = new BasicURLNormalizer();
+    private final SimpleRobotRulesParser robotsParser = new SimpleRobotRulesParser();
+    private final HttpClient httpClient = HttpClient.newBuilder()
+            .connectTimeout(Duration.ofSeconds(10))
+            .followRedirects(HttpClient.Redirect.NORMAL)
+            .build();
+
     private volatile boolean isRunning;
 
     @Autowired
-    public WebCrawler(CrawlerProperties config, UrlQueue urlQueue, StorageService storageService) {
+    public WebCrawler(CrawlerProperties config,
+                      UrlQueue urlQueue,
+                      StorageService storageService,
+                      CrawlJobService jobs,
+                      ScopeService scope,
+                      ActivityFeed activity) {
         this.config = config;
         this.urlQueue = urlQueue;
         this.storageService = storageService;
-        this.executorService = Executors.newFixedThreadPool(config.maxConcurrentRequests());
-        this.retryScheduler = Executors.newScheduledThreadPool(2);  // Small pool for scheduling retries
-        this.lastCrawled = new ConcurrentHashMap<>();
-        this.robotsCache = new ConcurrentHashMap<>();
-        this.isRunning = false;
+        this.jobs = jobs;
+        this.scope = scope;
+        this.activity = activity;
+        // Shared virtual-thread executor for per-URL work — one instance,
+        // never recreated per batch. Fixes the exit-137 OOM caused by
+        // creating a fresh executor per URL that never got shut down.
+        this.fetchExecutor = Executors.newVirtualThreadPerTaskExecutor();
+        this.retryScheduler = Executors.newScheduledThreadPool(2);
+        this.workerExecutor = Executors.newVirtualThreadPerTaskExecutor();
     }
 
     @PostConstruct
     private void initialize() {
-        logger.info("Initializing WebCrawler service...");
+        logger.info("WebCrawler initialised (maxDepth={}, maxConcurrent={}, robots={}, jobs={})",
+                config.maxDepth(), config.maxConcurrentRequests(),
+                config.respectRobotsTxt(), config.getSeedUrlSet().size());
     }
 
     public synchronized void start() {
         if (isRunning) {
-            logger.info("WebCrawler is already running");
+            logger.info("WebCrawler already running");
             return;
         }
-        
         isRunning = true;
-        logger.info("Starting WebCrawler...");
-        
-        // Seed the queue with initial URLs
-        seedUrlQueue();
-
-        // Start batch crawler workers (fewer workers since each handles batches)
-        int workerCount = Math.max(1, config.maxConcurrentRequests() / 5); // Use fewer workers for batch processing
-        logger.info("Starting {} batch crawler workers", workerCount);
-        for (int i = 0; i < workerCount; i++) {
-            CompletableFuture.runAsync(this::crawlLoop, executorService);
+        logger.info("Starting WebCrawler");
+        try {
+            seedUrlQueue();
+            int workerCount = Math.max(1, config.maxConcurrentRequests() / 5);
+            logger.info("Starting {} crawl worker(s)", workerCount);
+            for (int i = 0; i < workerCount; i++) {
+                workerExecutor.execute(this::crawlLoop);
+            }
+        } catch (RuntimeException e) {
+            // Roll back the running flag so a subsequent start() attempt can
+            // retry initialisation.
+            isRunning = false;
+            throw e;
         }
     }
-    
+
     public synchronized void stop() {
-        if (!isRunning) {
-            logger.info("WebCrawler is already stopped");
-            return;
-        }
-        
-        logger.info("Stopping WebCrawler...");
+        if (!isRunning) return;
+        logger.info("Stopping WebCrawler");
         isRunning = false;
     }
-    
+
     public boolean isRunning() {
         return isRunning;
     }
 
     private void seedUrlQueue() {
-        logger.info("Seeding URL queue with {} URLs", config.getSeedUrlSet().size());
-        config.getSeedUrlSet().forEach(url -> {
-            logger.info("Adding seed URL to queue: {}", url);
-            CrawlRequest request = new CrawlRequest(url, 0, null, Instant.now(), 1);
-            urlQueue.enqueue(request).join();
-            logger.info("Successfully enqueued seed URL: {}", url);
-        });
-        logger.info("Finished seeding URL queue");
+        Set<String> seeds = config.getSeedUrlSet();
+        logger.info("Seeding URL queue with {} URL(s)", seeds.size());
+        for (String url : seeds) {
+            String normalized = normalize(url);
+            if (normalized == null) continue;
+            CrawlRequest request = new CrawlRequest(
+                    normalized, 0, null, Instant.now(), 1, 0, null, null);
+            try {
+                urlQueue.enqueue(request).get(10, TimeUnit.SECONDS);
+                logger.info("Seeded: {}", normalized);
+            } catch (Exception e) {
+                logger.warn("Failed to seed URL {}: {}", normalized, e.getMessage());
+            }
+        }
     }
 
+    /**
+     * Per-worker crawl loop: each worker owns its own BatchConsumer. Kafka
+     * consumers are single-thread-affinity, so poll+commit must happen on the
+     * same thread — this is that thread.
+     */
     private void crawlLoop() {
-        logger.info("Starting batch crawl loop thread: {}", Thread.currentThread().getName());
-        while (isRunning) {
-            try {
-                // Poll for a batch of URLs
-                logger.debug("Polling for batch of URLs (timeout: {}ms)...", config.pollTimeout().toMillis());
-                List<CrawlRequest> requests = urlQueue.pollBatch(config.pollTimeout().toMillis()).join();
-                
-                if (requests.isEmpty()) {
-                    logger.debug("No URLs found in batch poll, continuing...");
-                    continue;
-                }
-                
-                logger.info("📦 Received batch of {} URLs to process", requests.size());
-                
-                // Process batch in parallel using Virtual Threads
-                processBatchInParallel(requests);
-                
-                // Commit the batch only after all URLs are processed
-                logger.info("✅ All URLs in batch processed successfully, committing offsets");
-                urlQueue.commitBatch().join();
-                
-            } catch (Exception e) {
-                logger.error("Error in batch crawl loop", e);
-                // Sleep briefly before retrying
+        Thread current = Thread.currentThread();
+        logger.info("Crawl loop starting: {}", current.getName());
+        try (BatchConsumer consumer = urlQueue.openBatchConsumer()) {
+            while (isRunning) {
                 try {
-                    Thread.sleep(1000);
-                } catch (InterruptedException ie) {
-                    Thread.currentThread().interrupt();
+                    BatchConsumer.Batch batch = consumer.poll(config.pollTimeout());
+                    // No records → no offsets to commit; loop again.
+                    if (!batch.hasRecords()) continue;
+                    if (batch.isEmpty()) {
+                        // All records failed to parse — commit anyway so we
+                        // don't re-poll broken messages forever.
+                        batch.commit().run();
+                        continue;
+                    }
+
+                    logger.info("Processing batch of {} URL(s)", batch.size());
+                    processBatch(batch.requests());
+
+                    // Commit only after processing — losses on crash are
+                    // bounded to at most one batch.
+                    batch.commit().run();
+                } catch (org.apache.kafka.common.errors.WakeupException we) {
+                    // Woken up by shutdown — exit cleanly.
                     break;
+                } catch (Exception e) {
+                    logger.error("Crawl loop iteration failed", e);
+                    sleepMillis(1_000);
                 }
             }
-        }
-        logger.info("Batch crawl loop thread exiting: {}", Thread.currentThread().getName());
-    }
-    
-    private void processBatchInParallel(List<CrawlRequest> requests) {
-        logger.info("🚀 Starting parallel processing of {} URLs using Virtual Threads", requests.size());
-        
-        // Create virtual thread tasks for each URL
-        List<CompletableFuture<Void>> crawlTasks = requests.stream()
-            .map(this::createCrawlTask)
-            .toList();
-        
-        // Wait for all crawl tasks to complete
-        CompletableFuture<Void> allTasks = CompletableFuture.allOf(
-            crawlTasks.toArray(new CompletableFuture[0])
-        );
-        
-        try {
-            allTasks.join(); // Wait for all tasks to complete
-            logger.info("✅ Completed parallel processing of {} URLs", requests.size());
         } catch (Exception e) {
-            logger.error("❌ Error during parallel processing of batch", e);
-            // Continue processing - individual errors are logged in each task
+            logger.error("Crawl loop terminated abnormally", e);
+        }
+        logger.info("Crawl loop exiting: {}", current.getName());
+    }
+
+    private void processBatch(List<CrawlRequest> requests) {
+        CompletableFuture<?>[] tasks = requests.stream()
+                .map(req -> CompletableFuture.runAsync(() -> {
+                    try {
+                        processSingleRequest(req);
+                    } catch (Exception e) {
+                        logger.error("URL failed: {}", req.url(), e);
+                    }
+                }, fetchExecutor))
+                .toArray(CompletableFuture[]::new);
+        try {
+            CompletableFuture.allOf(tasks)
+                    .orTimeout(config.batchTimeout().toMillis(), TimeUnit.MILLISECONDS)
+                    .join();
+        } catch (CompletionException | CancellationException e) {
+            logger.warn("Batch exceeded timeout {} — committing partial progress",
+                    config.batchTimeout());
         }
     }
-    
-    private CompletableFuture<Void> createCrawlTask(CrawlRequest request) {
-        return CompletableFuture.runAsync(() -> {
-            try {
-                processSingleRequest(request);
-            } catch (Exception e) {
-                logger.error("Error processing URL: {}", request.url(), e);
-            }
-        }, Executors.newVirtualThreadPerTaskExecutor());
-    }
-    
+
     private void processSingleRequest(CrawlRequest request) {
-        logger.info("🔍 Processing URL: {} (depth: {}, retry: {}) [Thread: {}]", 
-            request.url(), request.depth(), request.retryCount(), Thread.currentThread().getName());
-        
-        // Check if request is scheduled for the future
         if (!request.isReadyToProcess()) {
-            logger.debug("Request not ready yet, re-queuing: {} (scheduled for: {})", 
-                request.url(), request.scheduledFor());
             urlQueue.enqueue(request);
             return;
         }
-        
         CrawlDecision decision = shouldCrawl(request);
         switch (decision.action()) {
-            case CRAWL -> {
-                logger.info("✅ URL passed validation, starting crawl: {} [{}]", request.url(), Thread.currentThread().getName());
-                crawlUrlAux(request);
-                logger.info("🎯 Successfully crawled URL: {} [{}]", request.url(), Thread.currentThread().getName());
-            }
-            case RETRY_LATER -> {
-                logger.info("⏰ Scheduling URL for retry: {} (reason: {}, retry #{}, scheduled for: {})", 
-                    request.url(), decision.reason(), request.retryCount() + 1, decision.retryAt());
-                scheduleRetry(request, decision.retryAt());
-            }
+            case CRAWL -> crawlUrlAux(request);
+            case RETRY_LATER -> scheduleRetry(request, decision.retryAt());
             case REJECT -> {
-                logger.info("❌ URL rejected: {} (reason: {})", request.url(), decision.reason());
+                logger.info("Rejected {} — {}", request.url(), decision.reason());
+                activity.rejected(request.url(), decision.reason());
             }
         }
     }
@@ -198,337 +252,326 @@ public class WebCrawler {
         try {
             URL url = new URL(request.url());
             String domain = url.getHost();
-            
-            logger.info("Validating URL: {} (domain: {})", request.url(), domain);
 
-            // Check depth
             if (request.depth() > config.maxDepth()) {
-                logger.info("URL rejected - depth {} exceeds max depth {}: {}", request.depth(), config.maxDepth(), request.url());
-                return CrawlDecision.reject("depth " + request.depth() + " exceeds max depth " + config.maxDepth());
+                return CrawlDecision.reject("depth " + request.depth() + " > maxDepth " + config.maxDepth());
             }
-            logger.info("✓ Depth check passed ({}/{}): {}", request.depth(), config.maxDepth(), request.url());
-
-            // Check retry limits
             if (request.retryCount() > config.maxRetryAttempts()) {
-                logger.info("URL rejected - exceeded max retry attempts {}: {}", config.maxRetryAttempts(), request.url());
-                return CrawlDecision.reject("exceeded max retry attempts " + config.maxRetryAttempts());
+                return CrawlDecision.reject("retry limit " + config.maxRetryAttempts());
             }
 
-            // Check allowed domains
-            var allowedDomains = config.getAllowedDomainPatterns();
-            if (!allowedDomains.isEmpty()) {
-                boolean domainMatches = allowedDomains.stream().anyMatch(p -> p.matcher(domain).matches());
-                if (!domainMatches) {
-                    logger.info("URL rejected - domain '{}' doesn't match allowed patterns: {}", domain, 
-                        allowedDomains.stream().map(p -> p.pattern()).collect(java.util.stream.Collectors.toList()));
-                    return CrawlDecision.reject("domain doesn't match allowed patterns");
-                }
-                logger.info("✓ Domain check passed - '{}' matches allowed patterns: {}", domain, request.url());
-            } else {
-                logger.info("✓ No domain restrictions configured: {}", request.url());
+            if (!scope.allows(request.url())) {
+                return CrawlDecision.reject(
+                        "domain '" + domain + "' not in scope (add via /api/crawler/url or the Add URLs tab to trust it)");
             }
 
-            // Check excluded patterns
-            var excludePatterns = config.getExcludePatternList();
-            boolean isExcluded = excludePatterns.stream().anyMatch(p -> p.matcher(request.url()).matches());
-            if (isExcluded) {
-                logger.info("URL rejected - matches exclude pattern: {}", request.url());
-                return CrawlDecision.reject("matches exclude pattern");
-            }
-            logger.info("✓ Exclude pattern check passed: {}", request.url());
-
-            // Check crawl delay - this is where we implement retry logic
-            Instant lastVisit = lastCrawled.get(domain);
-            if (lastVisit != null) {
-                Duration timeSinceLastVisit = Duration.between(lastVisit, Instant.now());
-                if (timeSinceLastVisit.compareTo(config.crawlDelay()) < 0) {
-                    if (config.enableDelayRetry()) {
-                        Duration remainingDelay = config.crawlDelay().minus(timeSinceLastVisit);
-                        Instant retryAt = Instant.now().plus(remainingDelay);
-                        logger.info("URL scheduled for retry due to crawl delay - domain '{}': {} (retry in {}ms)", 
-                            domain, request.url(), remainingDelay.toMillis());
-                        return CrawlDecision.retryLater("crawl delay not satisfied for domain " + domain, retryAt);
-                    } else {
-                        logger.info("URL rejected - crawl delay not satisfied for domain '{}': {}", domain, request.url());
-                        return CrawlDecision.reject("crawl delay not satisfied for domain " + domain);
-                    }
-                }
-            }
-            logger.info("✓ Crawl delay check passed: {}", request.url());
-
-            // Check robots.txt
             if (config.respectRobotsTxt()) {
-                logger.info("Checking robots.txt for: {}", request.url());
-                RobotsTxtRules rules = getRobotsRules(url);
+                SimpleRobotRules rules = getRobotsRules(url, request.jobId());
                 if (!rules.isAllowed(request.url())) {
-                    logger.info("URL rejected - robots.txt disallows: {}", request.url());
                     return CrawlDecision.reject("robots.txt disallows");
                 }
-                logger.info("✓ Robots.txt check passed: {}", request.url());
-            } else {
-                logger.info("✓ Robots.txt checking disabled: {}", request.url());
             }
 
-            logger.info("✅ All validation checks passed for: {}", request.url());
+            // Politeness: atomically reserve the next allowed fetch time for
+            // this host BEFORE sleeping. Two concurrent tasks targeting the
+            // same host used to both read the same lastVisit, sleep the same
+            // duration, and fire simultaneously — this serialises them via
+            // per-host reservations spaced by crawlDelay.
+            try {
+                reserveAndAwaitPoliteness(domain);
+            } catch (InterruptedException ie) {
+                Thread.currentThread().interrupt();
+                return CrawlDecision.reject("interrupted during politeness delay");
+            }
+
             return CrawlDecision.crawl();
         } catch (Exception e) {
-            logger.error("Error checking if URL should be crawled: {}", request.url(), e);
+            logger.warn("Validation failed for {}: {}", request.url(), e.getMessage());
             return CrawlDecision.reject("validation error: " + e.getMessage());
         }
     }
-    
+
     /**
-     * Schedule a URL for retry after a specified delay.
+     * Atomically reserve the next-allowed fetch time for the host, then sleep
+     * until it. Guarantees that no two concurrent tasks for the same host
+     * fire less than crawlDelay apart within one process.
      */
-    private void scheduleRetry(CrawlRequest originalRequest, Instant retryAt) {
-        CrawlRequest retryRequest = originalRequest.withRetry(
-            originalRequest.retryCount() + 1,
-            retryAt
-        );
-        
-        Duration delay = Duration.between(Instant.now(), retryAt);
-        if (delay.isNegative()) {
-            // If the retry time is in the past, enqueue immediately
-            logger.debug("Retry time is in the past, enqueueing immediately: {}", originalRequest.url());
-            urlQueue.enqueue(retryRequest);
-        } else {
-            // Schedule for future execution
-            retryScheduler.schedule(
-                () -> {
-                    try {
-                        logger.info("🔄 Retry time reached, re-queueing URL: {} (attempt #{})", 
-                            retryRequest.url(), retryRequest.retryCount());
-                        urlQueue.enqueue(retryRequest).join();
-                    } catch (Exception e) {
-                        logger.error("Failed to re-queue URL for retry: {}", retryRequest.url(), e);
-                    }
-                },
-                delay.toMillis(),
-                TimeUnit.MILLISECONDS
-            );
+    private void reserveAndAwaitPoliteness(String domain) throws InterruptedException {
+        Object lock = hostLocks.get(domain, k -> new Object());
+        Instant fireAt;
+        synchronized (lock) {
+            Instant now = Instant.now();
+            Instant scheduled = nextFetchAt.get(domain, k -> now);
+            fireAt = scheduled.isAfter(now) ? scheduled : now;
+            nextFetchAt.put(domain, fireAt.plus(config.crawlDelay()));
         }
+        long waitMs = Duration.between(Instant.now(), fireAt).toMillis();
+        if (waitMs > 0) Thread.sleep(waitMs);
     }
 
-    private CompletableFuture<Void> crawlUrl(CrawlRequest request) {
-        return CompletableFuture.runAsync(() -> {
-            crawlUrlAux(request);
-        }, executorService);
+    private void scheduleRetry(CrawlRequest originalRequest, Instant retryAt) {
+        CrawlRequest retryRequest = originalRequest.withRetry(
+                originalRequest.retryCount() + 1, retryAt);
+        Duration delay = Duration.between(Instant.now(), retryAt);
+        if (delay.isNegative() || delay.isZero()) {
+            urlQueue.enqueue(retryRequest);
+            return;
+        }
+        retryScheduler.schedule(() -> {
+            try {
+                urlQueue.enqueue(retryRequest).get(10, TimeUnit.SECONDS);
+            } catch (Exception e) {
+                logger.warn("Retry enqueue failed for {}: {}", retryRequest.url(), e.getMessage());
+            }
+        }, delay.toMillis(), TimeUnit.MILLISECONDS);
     }
 
     private void crawlUrlAux(CrawlRequest request) {
         try {
-            logger.error("about to crawl: {}", request.url());
             URL url = new URL(request.url());
-            lastCrawled.put(url.getHost(), Instant.now());
+            String domain = url.getHost();
 
-            Document doc = Jsoup.connect(request.url())
-                .userAgent(config.userAgent())
-                .timeout(30000)
-                .get();
-
-            String content = doc.html();
-            String contentHash = computeHash(content);
-
-            // Check if we've seen this content before
-            if (storageService.exists(contentHash).join()) {
-                logger.debug("Skipping duplicate content: {}", request.url());
+            // Job budget: check WITHOUT touching counters. Non-2xx pages,
+            // duplicate content, and IOException paths must not consume
+            // budget — we record the crawl only after a successful store.
+            if (!jobs.canAdmit(request.jobId(), domain)) {
+                logger.info("Job {} rejected {} (budget or status)", request.jobId(), request.url());
                 return;
             }
 
-            // Extract links
-            logger.info("🔍 Extracting links from page: {}", request.url());
-            Set<String> rawLinks = doc.select("a[href]").stream()
-                .map(element -> element.attr("abs:href"))
-                .filter(link -> !link.isEmpty())
-                .collect(Collectors.toSet());
+            Connection.Response response = Jsoup.connect(request.url())
+                    .userAgent(config.userAgent())
+                    .timeout(30_000)
+                    .maxBodySize(config.maxContentBytes())
+                    .ignoreHttpErrors(true)
+                    .ignoreContentType(false)
+                    .followRedirects(true)
+                    .execute();
 
-            logger.info("🔗 Found {} raw links on page: {}", rawLinks.size(), request.url());
-
-            // Filter links and log the filtering process
-            Set<String> links = new HashSet<>();
-            int validLinks = 0;
-            int filteredLinks = 0;
-
-            for (String link : rawLinks) {
-                try {
-                    URL linkUrl = new URL(link);
-                    String linkDomain = linkUrl.getHost();
-
-                    // Apply basic filtering (similar to shouldCrawl but for discovered links)
-                    boolean isValid = true;
-                    String filterReason = "";
-
-                    // Check against allowed domains if configured
-                    var allowedDomains = config.getAllowedDomainPatterns();
-                    if (!allowedDomains.isEmpty()) {
-                        boolean domainMatches = allowedDomains.stream().anyMatch(p -> p.matcher(linkDomain).matches());
-                        if (!domainMatches) {
-                            isValid = false;
-                            filterReason = "domain '" + linkDomain + "' doesn't match allowed patterns";
-                        }
-                    }
-
-                    // Check against exclude patterns
-                    if (isValid) {
-                        var excludePatterns = config.getExcludePatternList();
-                        boolean isExcluded = excludePatterns.stream().anyMatch(p -> p.matcher(link).matches());
-                        if (isExcluded) {
-                            isValid = false;
-                            filterReason = "matches exclude pattern";
-                        }
-                    }
-
-                    if (isValid) {
-                        links.add(link);
-                        validLinks++;
-                        logger.debug("✓ Valid link found: {} -> {}", linkDomain, link);
-                    } else {
-                        filteredLinks++;
-                        logger.debug("✗ Filtered link: {} -> {} (reason: {})", linkDomain, link, filterReason);
-                    }
-                } catch (Exception e) {
-                    filteredLinks++;
-                    logger.debug("✗ Invalid link format: {} (error: {})", link, e.getMessage());
-                }
+            int status = response.statusCode();
+            String contentType = response.contentType() == null ? "" : response.contentType();
+            if (status < 200 || status >= 300 || !contentType.toLowerCase().contains("html")) {
+                logger.info("Skipping non-HTML/non-2xx {} (status={}, type={})",
+                        request.url(), status, contentType);
+                return;
             }
 
-            logger.info("📊 Link processing summary for {}: {} valid, {} filtered, {} total",
-                request.url(), validLinks, filteredLinks, rawLinks.size());
-            Set<String> finalLinks = links;
+            Document doc = response.parse();
+            String rawHtml = doc.html();
+            String contentHash = sha256Hex(doc.text().getBytes(StandardCharsets.UTF_8));
 
-            // Store the page
+            if (storageService.exists(contentHash).join()) {
+                logger.info("Duplicate content — skipping {} (hash matches earlier page)", request.url());
+                activity.rejected(request.url(), "duplicate content (visible text hash)");
+                return;
+            }
+
+            // Extract ALL absolute links (unfiltered) — the stored page
+            // reflects reality. Then compute the in-scope subset for
+            // enqueueing. Users see both counts.
+            Set<String> discoveredLinks = extractAllLinks(doc);
+            Set<String> linksToFollow = discoveredLinks.stream()
+                    .filter(scope::allows)
+                    .collect(Collectors.toCollection(LinkedHashSet::new));
+
+            Map<String, String> metadata = new LinkedHashMap<>();
+            metadata.put("depth", String.valueOf(request.depth()));
+            metadata.put("links_discovered", String.valueOf(discoveredLinks.size()));
+            metadata.put("links_followed", String.valueOf(linksToFollow.size()));
+            if (request.parentUrl() != null) metadata.put("parent_url", request.parentUrl());
+            if (request.sourceFeedItemId() != null)
+                metadata.put("source_feed_item_id", request.sourceFeedItemId());
+
+            Map<String, String> headers = new LinkedHashMap<>();
+            headers.put("Content-Type", contentType);
+            response.headers().forEach(headers::putIfAbsent);
+
             PageContent pageContent = new PageContent(
-                request.url(),
-                contentHash,
-                content,
-                Instant.now(),
-                200,
-                Map.of("Content-Type", "text/html"),
-                links,
-                Map.of("depth", String.valueOf(request.depth()))
-            );
+                    request.url(),
+                    contentHash,
+                    rawHtml,
+                    Instant.now(),
+                    status,
+                    headers,
+                    discoveredLinks,
+                    metadata,
+                    request.jobId());
 
-            logger.info("Storing page content for URL: {} (hash: {})", request.url(), contentHash);
-            storageService.store(pageContent).join();
-            logger.info("Successfully stored page: {}", request.url());
+            storageService.store(pageContent)
+                    .orTimeout(30, TimeUnit.SECONDS)
+                    .join();
 
-            // Enqueue discovered links
-            logger.info("📤 Enqueueing {} valid links discovered from: {}", finalLinks.size(), request.url());
-            int enqueuedCount = 0;
-            for (String link : finalLinks) {
-                try {
-                    CrawlRequest newRequest = new CrawlRequest(
-                        link,
-                        request.depth() + 1,
-                        request.url(),
-                        Instant.now(),
-                        1
-                    );
-                    urlQueue.enqueue(newRequest).join();
-                    enqueuedCount++;
-                    logger.info("✓ Enqueued link [depth {}]: {}", newRequest.depth(), link);
-                } catch (Exception e) {
-                    logger.error("✗ Failed to enqueue link: {} (error: {})", link, e.getMessage());
-                }
-            }
-            logger.info("🎯 Successfully enqueued {} out of {} discovered links from: {}",
-                enqueuedCount, finalLinks.size(), request.url());
+            // Only now do we consume budget — the page really landed.
+            jobs.recordCrawl(request.jobId(), domain);
 
+            activity.crawled(request.url(), status, discoveredLinks.size(), linksToFollow.size());
+
+            // Enqueue in-scope links — depth-checked here to avoid
+            // 2-4x wasted Kafka/Cassandra/log traffic.
+            enqueueDiscoveredLinks(request, linksToFollow);
+
+        } catch (IOException e) {
+            logger.warn("Crawl failed for {}: {}", request.url(), e.getMessage());
+            activity.error(request.url(), e.getMessage());
         } catch (Exception e) {
-            logger.error("Error crawling URL: {}", request.url(), e);
+            logger.error("Unexpected error crawling {}", request.url(), e);
+            activity.error(request.url(), e.getMessage());
         }
     }
 
-    private String computeHash(String content) {
+    private Set<String> extractAllLinks(Document doc) {
+        return doc.select("a[href]").stream()
+                .map(el -> el.attr("abs:href"))
+                .map(this::normalize)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+    }
+
+    private void enqueueDiscoveredLinks(CrawlRequest parent, Set<String> links) {
+        int childDepth = parent.depth() + 1;
+        if (childDepth > config.maxDepth()) {
+            logger.debug("Not enqueueing {} children — at maxDepth", links.size());
+            return;
+        }
+        List<CompletableFuture<Void>> enqueues = new ArrayList<>(links.size());
+        for (String link : links) {
+            CrawlRequest child = new CrawlRequest(
+                    link, childDepth, parent.url(), Instant.now(), 1, 0, null, parent.jobId());
+            enqueues.add(urlQueue.enqueue(child));
+        }
+        try {
+            CompletableFuture.allOf(enqueues.toArray(new CompletableFuture[0]))
+                    .get(30, TimeUnit.SECONDS);
+        } catch (Exception e) {
+            logger.warn("Bulk enqueue partially failed for parent {}: {}", parent.url(), e.getMessage());
+        }
+    }
+
+    private String normalize(String rawUrl) {
+        if (rawUrl == null || rawUrl.isBlank()) return null;
+        try {
+            String normalized = urlNormalizer.filter(rawUrl);
+            if (normalized == null) return null;
+            // Sanity check — throws if the URL is not parseable.
+            new URL(normalized);
+            return normalized;
+        } catch (Exception e) {
+            return null;
+        }
+    }
+
+    private String sha256Hex(byte[] bytes) {
         try {
             MessageDigest digest = MessageDigest.getInstance("SHA-256");
-            byte[] hash = digest.digest(content.getBytes());
-            StringBuilder hexString = new StringBuilder();
+            byte[] hash = digest.digest(bytes);
+            StringBuilder sb = new StringBuilder(hash.length * 2);
             for (byte b : hash) {
                 String hex = Integer.toHexString(0xff & b);
-                if (hex.length() == 1) hexString.append('0');
-                hexString.append(hex);
+                if (hex.length() == 1) sb.append('0');
+                sb.append(hex);
             }
-            return hexString.toString();
+            return sb.toString();
         } catch (Exception e) {
-            throw new RuntimeException("Failed to compute content hash", e);
+            throw new IllegalStateException("SHA-256 not available", e);
         }
     }
 
-    private RobotsTxtRules getRobotsRules(URL url) {
-        String domain = url.getHost();
-        return robotsCache.computeIfAbsent(domain, k -> {
-            try {
-                String robotsUrl = String.format("%s://%s/robots.txt", url.getProtocol(), domain);
-                Document robotsTxt = Jsoup.connect(robotsUrl)
-                    .userAgent(config.userAgent())
-                    .timeout(10000)
-                    .get();
-                return new RobotsTxtRules(robotsTxt.body().text());
-            } catch (Exception e) {
-                logger.warn("Failed to fetch robots.txt for {}", domain, e);
-                return new RobotsTxtRules("");  // Allow all if robots.txt is unavailable
+    /**
+     * Cached per host — the robots rules themselves don't depend on the
+     * calling job. jobId is only propagated so sitemap-discovered URLs
+     * carry the correct job attribution.
+     */
+    private SimpleRobotRules getRobotsRules(URL url, java.util.UUID jobId) {
+        String key = url.getProtocol() + "://" + url.getHost();
+        return robotsCache.get(key, k -> fetchRobots(url, jobId));
+    }
+
+    private SimpleRobotRules fetchRobots(URL url, java.util.UUID jobId) {
+        String robotsUrl = url.getProtocol() + "://" + url.getHost() + "/robots.txt";
+        try {
+            HttpRequest req = HttpRequest.newBuilder()
+                    .uri(URI.create(robotsUrl))
+                    .timeout(Duration.ofSeconds(10))
+                    .header("User-Agent", config.userAgent())
+                    .GET()
+                    .build();
+            HttpResponse<byte[]> resp = httpClient.send(req, HttpResponse.BodyHandlers.ofByteArray());
+            SimpleRobotRules rules = robotsParser.parseContent(
+                    robotsUrl, resp.body(), "text/plain", List.of(config.userAgent()));
+            if (config.discoverSitemaps()) {
+                rules.getSitemaps().forEach(sm -> enqueueSitemap(sm, url, jobId));
             }
-        });
+            return rules;
+        } catch (Exception e) {
+            logger.debug("robots.txt fetch failed for {}: {}", url.getHost(), e.getMessage());
+            return robotsParser.failedFetch(500);
+        }
+    }
+
+    private void enqueueSitemap(String sitemapUrl, URL originatingPage, java.util.UUID jobId) {
+        String normalized = normalize(sitemapUrl);
+        if (normalized == null) return;
+        // Caffeine has no putIfAbsent-returns-boolean; simulate with getIfPresent.
+        if (sitemapsSeen.getIfPresent(normalized) != null) return;
+        sitemapsSeen.put(normalized, Boolean.TRUE);
+        // Fire-and-forget on the fetch executor — sitemap parsing is
+        // best-effort, we never block a crawl on it.
+        CompletableFuture.runAsync(() -> {
+            try {
+                HttpRequest req = HttpRequest.newBuilder()
+                        .uri(URI.create(normalized))
+                        .timeout(Duration.ofSeconds(15))
+                        .header("User-Agent", config.userAgent())
+                        .GET()
+                        .build();
+                HttpResponse<byte[]> resp = httpClient.send(req, HttpResponse.BodyHandlers.ofByteArray());
+                var siteMap = new crawlercommons.sitemaps.SiteMapParser()
+                        .parseSiteMap(resp.body(), new URL(normalized));
+                if (siteMap instanceof crawlercommons.sitemaps.SiteMap sm) {
+                    for (var url : sm.getSiteMapUrls()) {
+                        String loc = normalize(url.getUrl().toString());
+                        if (loc == null) continue;
+                        urlQueue.enqueue(new CrawlRequest(
+                                loc, 0, originatingPage.toString(), Instant.now(), 1, 0, null, jobId));
+                    }
+                    logger.info("Enqueued {} URLs from sitemap {}", sm.getSiteMapUrls().size(), normalized);
+                }
+            } catch (Exception e) {
+                logger.debug("Sitemap parse failed for {}: {}", normalized, e.getMessage());
+            }
+        }, fetchExecutor);
+    }
+
+    private void sleepMillis(long ms) {
+        try {
+            Thread.sleep(ms);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+        }
     }
 
     @PreDestroy
     public void destroy() {
-        logger.info("Destroying WebCrawler service...");
+        logger.info("Destroying WebCrawler");
         stop();
-        
-        // Shutdown main executor
-        executorService.shutdown();
-        try {
-            if (!executorService.awaitTermination(30, TimeUnit.SECONDS)) {
-                executorService.shutdownNow();
-            }
-        } catch (InterruptedException e) {
-            executorService.shutdownNow();
-        }
-        
-        // Shutdown retry scheduler
-        retryScheduler.shutdown();
-        try {
-            if (!retryScheduler.awaitTermination(10, TimeUnit.SECONDS)) {
-                retryScheduler.shutdownNow();
-                logger.warn("Retry scheduler did not shut down gracefully, forcing shutdown");
-            }
-        } catch (InterruptedException e) {
-            retryScheduler.shutdownNow();
-        }
+        // Workers first so no new fetches are submitted while we tear down
+        // the fetch executor. Retry scheduler next (nothing else feeds it).
+        // Fetch executor last so in-flight fetches get their timeout window.
+        shutdown(workerExecutor, "workerExecutor", 30);
+        shutdown(retryScheduler, "retryScheduler", 10);
+        shutdown(fetchExecutor, "fetchExecutor", 30);
     }
 
-    private static class RobotsTxtRules {
-        private final List<String> disallowedPaths;
-
-        public RobotsTxtRules(String robotsTxt) {
-            this.disallowedPaths = parseRobotsTxt(robotsTxt);
-        }
-
-        private List<String> parseRobotsTxt(String robotsTxt) {
-            List<String> disallowed = new ArrayList<>();
-            boolean relevantUserAgent = false;
-
-            for (String line : robotsTxt.split("\n")) {
-                line = line.trim();
-                if (line.isEmpty()) continue;
-
-                if (line.toLowerCase().startsWith("user-agent:")) {
-                    String agent = line.substring(11).trim();
-                    relevantUserAgent = agent.equals("*");
-                } else if (relevantUserAgent && line.toLowerCase().startsWith("disallow:")) {
-                    String path = line.substring(9).trim();
-                    if (!path.isEmpty()) {
-                        disallowed.add(path);
-                    }
-                }
+    private static void shutdown(ExecutorService es, String name, long timeoutSec) {
+        es.shutdown();
+        try {
+            if (!es.awaitTermination(timeoutSec, TimeUnit.SECONDS)) {
+                logger.warn("{} did not terminate — forcing", name);
+                es.shutdownNow();
             }
-            return disallowed;
-        }
-
-        public boolean isAllowed(String url) {
-            return disallowedPaths.stream().noneMatch(url::contains);
+        } catch (InterruptedException ie) {
+            Thread.currentThread().interrupt();
+            es.shutdownNow();
         }
     }
 }
